--- a/index_style.css
+++ b/index_style.css
@@ -1,19 +1,30 @@
+        /* IN GENERAL */
+
 body{
     padding: 0;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
-    color: white;
+    color: #dcdcdc;
     font-size: 15px;
+    box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6, p{
     padding: 0;
     margin: 0;
     text-transform: uppercase;
+    margin-block-start: 0;
+    margin-block-end: 0;
 }
 
 ul, li{
     display: block;
+    padding: 0;
+    margin: 0;
+}
+
+section{
+    padding-top: 96px;
 }
 
 .container{
@@ -21,9 +32,99 @@ ul, li{
     margin: 0 auto;
 }
 
+        /* BACKGROUND 1 */
+
 .header{
-    background: url("background.png") no-repeat center top;
+    background: url("background.png") no-repeat center top / cover;
+    height: 820px;
 }
+
+        /* HEADER */
+
+.nav{
+  /* height: 80px; */
+  display: flex;
+  align-items: center;
+  padding: 16px 0px;
+
+  position: sticky;
+  top: 0;
+  /* background-color: #161616; */
+}
+
 .header_logo_pic{
-    height: 100%;
+    height: 30px;
+}
+
+.header a {
+    color: #dcdcdc;    
+}
+
+.header_text{
+    color: #dcdcdc;
+    text-transform: uppercase;
+    font-size: 12px;
+    width: 152px;
+    padding-left: 16px;
+    font-weight: 700;
+    text-decoration: none;
+    letter-spacing: 0.1em;
+}
+
+.menu{
+    display: flex;
+    margin-left: auto;
+}
+
+.menu li a{
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.2em;
+}
+
+.menu li{
+    margin-left: 40px;
+}
+
+.catchword{
+    margin-top: 376px;
+    /* padding-bottom: 136px; */
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+}
+
+.catchword h1{
+    display: block;
+    font-size: 60px;
+    font-weight: 500;
+    letter-spacing: 0.2em;
+    text-align: center;
+    width: 752px;
+    padding: 24px 16px;
+    border: 1px solid #dcdcdc;
+}
+
+        /* PROJECTS */
+
+.photoFirstLine{
+    display: flex;
+    justify-content: space-between;
+}
+    
+.projectPhoto{
+    width: 368px;
+}
+.projectText{
+    font-size: 12px;
+    font-weight: 300;
+    margin-block-start: 0;
+}
+
+.photoFirstLine div{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 88px;
 }
