Change second picture line in Projects, made smooth scrolling to Project menu and back

--- a/index_style.css
+++ b/index_style.css
@@ -1,4 +1,7 @@
         /* IN GENERAL */
+html{
+    scroll-behavior: smooth;
+}
 
 body{
     padding: 0;
@@ -7,6 +10,7 @@ body{
     color: #dcdcdc;
     font-size: 15px;
     box-sizing: border-box;
+    background-color: #121212;
 }
 
 h1, h2, h3, h4, h5, h6, p{
@@ -24,7 +28,9 @@ ul, li{
 }
 
 section{
-    padding-top: 96px;
+    margin: 80px 0px;
+    scroll-margin-top: 3em;
+    
 }
 
 .container{
@@ -35,7 +41,7 @@ section{
         /* BACKGROUND 1 */
 
 .header{
-    background: url("background.png") no-repeat center top / cover;
+    background: url("assets/images/projects/00_general/background.jpg") no-repeat center top / cover;
     height: 820px;
 }
 
@@ -103,28 +109,42 @@ section{
     letter-spacing: 0.2em;
     text-align: center;
     width: 752px;
-    padding: 24px 16px;
+    padding: 24px 0px;
     border: 1px solid #dcdcdc;
 }
 
         /* PROJECTS */
 
-.photoFirstLine{
+.photoLine{
     display: flex;
     justify-content: space-between;
 }
-    
+
 .projectPhoto{
     width: 368px;
 }
 .projectText{
     font-size: 12px;
     font-weight: 300;
+    text-transform: uppercase;
     margin-block-start: 0;
+    margin-top: 8px;
 }
 
-.photoFirstLine div{
+.photoLine div{
     display: flex;
     flex-direction: column;
-    margin-bottom: 88px;
+}
+
+.buttonMoreProjects{
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0.5em;
+    text-align: center;
+    width: 368px;
+    padding: 4px 0px;
+    border: 1px solid #dcdcdc;
+    margin-top: 32px;
+    margin-left: auto;
+    margin-right: auto;
 }
