--- a/index_style.css
+++ b/index_style.css
@@ -2,21 +2,23 @@
 html{
     scroll-behavior: smooth;
 }
+* {
+    box-sizing: border-box;
+}
 
 body{
     padding: 0;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
     color: #dcdcdc;
-    font-size: 15px;
-    box-sizing: border-box;
+    /* font-size: 15px; */
     background-color: #121212;
 }
 
 h1, h2, h3, h4, h5, h6, p{
     padding: 0;
     margin: 0;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     margin-block-start: 0;
     margin-block-end: 0;
 }
@@ -33,7 +35,7 @@ section{
     
 }
 
-.container{
+.containerHeader, .containerProjets, .containerAboutUs, .containerContacts {
     width: 1170px;
     margin: 0 auto;
 }
@@ -42,7 +44,7 @@ section{
 
 .header{
     background: url("assets/images/projects/00_general/background.jpg") no-repeat center top / cover;
-    height: 820px;
+    /* height: 820px; */
 }
 
         /* HEADER */
@@ -96,7 +98,7 @@ section{
 
 .catchword{
     margin-top: 376px;
-    /* padding-bottom: 136px; */
+    padding-bottom: 136px;
     text-transform: uppercase;
     display: flex;
     justify-content: center;
@@ -141,10 +143,134 @@ section{
     font-weight: 500;
     letter-spacing: 0.5em;
     text-align: center;
+    text-transform: uppercase;
     width: 368px;
     padding: 4px 0px;
     border: 1px solid #dcdcdc;
+    margin: auto;
     margin-top: 32px;
-    margin-left: auto;
-    margin-right: auto;
+}
+
+        /* ABOUT US */
+
+.aboutUsPhoto{
+    height: 200px;
+}
+
+
+
+        /* CONTACTS */
+
+.containerContacts{
+    display: flex;
+    justify-content: space-between;
+    height: 520px;
+}
+
+.whatWeDo{
+    width: 49%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-left: 1px #dcdcdc solid;
+}
+
+.whatWeDoText{
+    margin-left: 72px;
+}
+
+.mainText{
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 0.2em;
+    margin-bottom: 8px;
+}
+
+.additionalText{
+    font-size: 12px;
+    font-weight: 300;
+    letter-spacing: 0.2em;
+    line-height: 140%;
+    /* text-align: justify; */
+}
+
+
+        /* PLACE A MEETING */
+
+        
+.placeAMeeting{
+    width: 35%;
+    border: #dcdcdc solid 1px;
+}
+
+.placeAMeetingContainer{
+    width: 85%;
+    height: 100%;
+    margin: auto;
+}
+
+.cotactUs{
+    height: 10%;
+    display: flex;
+}
+
+.cotactUsText{
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 0.2em;
+    width: fit-content;
+    margin: auto;
+    text-transform: uppercase;
+
+}
+
+.input{
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; 
+}
+
+.inputText{
+    margin-bottom: 4px;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.inputField{
+    width: 100%;
+    height: 32px;
+    font-size: 14px;
+    font-weight: 300;
+    padding: 5px 5px;
+    color: #dcdcdc;
+    background-color: #121212;
+    border: #dcdcdc 1px solid;
+}
+
+textarea{
+    resize: none;
+    margin: 0;
+    /* padding: 5px 0px; */
+}
+
+
+.button{
+    height: 15%;
+    display: flex;
+    /* padding-bottom: 16px; */
+}
+
+.submitBtn{
+    font-size: 20px;
+    font-weight: 700;
+    color: #dcdcdc;
+    letter-spacing: 0.2em;
+    background-color: #121212;
+    border: #dcdcdc 1px solid;
+    width: 50%;
+    padding: 4px 36px;
+    text-transform: uppercase;
+    margin: auto;
+    cursor: pointer;
 }
