--- a/index_style.css
+++ b/index_style.css
@@ -30,9 +30,14 @@ ul, li{
 }
 
 section{
-    margin: 80px 0px;
+    margin-top: 40px;
+    margin-bottom: 80px;
     scroll-margin-top: 3em;
-    
+}
+
+footer{
+    margin-top: 160px;
+    margin-bottom: 80px;
 }
 
 .containerHeader, .containerProjets, .containerAboutUs, .containerContacts {
@@ -72,7 +77,7 @@ section{
     color: #dcdcdc;
     text-transform: uppercase;
     font-size: 12px;
-    width: 152px;
+    width: fit-content;
     padding-left: 16px;
     font-weight: 700;
     text-decoration: none;
@@ -116,6 +121,10 @@ section{
 }
 
         /* PROJECTS */
+
+.projects{
+    margin-top: 80px;
+}
 
 .photoLine{
     display: flex;
@@ -268,7 +277,7 @@ textarea{
     letter-spacing: 0.2em;
     background-color: #121212;
     border: #dcdcdc 1px solid;
-    width: 50%;
+    width: 175px;
     padding: 4px 36px;
     text-transform: uppercase;
     margin: auto;
