--- a/index_style.css
+++ b/index_style.css
@@ -40,7 +40,7 @@ footer{
     margin-bottom: 80px;
 }
 
-.containerHeader, .containerProjets, .containerAboutUs, .containerContacts {
+.containerHeader, .containerProjets, .containerAboutUs, .containerContacts, .containerFooter {
     width: 1170px;
     margin: 0 auto;
 }
@@ -282,4 +282,37 @@ textarea{
     text-transform: uppercase;
     margin: auto;
     cursor: pointer;
+}
+
+
+        /* Footer */
+
+.containerFooter{
+    margin-top: 80px;
+}
+
+.contactInfo{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.footerLogo{
+    height: 64px;
+}
+
+.footerText{
+    font-weight: 300;
+    font-size: 14px;
+    color: #dcdcdc;
+    text-decoration: none;
+    line-height: 140%;
+    
+}
+
+.privacyPolicy{
+    /* margin: auto 0; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
